# asbr

assignment1/: CMakeLists.txt  assignment1.perspective  assignment1.rviz  package.xml
assignment1/launch/: trajectory.launch  ur5.launch  ur5_robotiq.launch  viewer.launch
assignment1/src/: .assignment1.cpp.swo  assignment1.cpp  assignment1.hpp  trajectory.cpp
assignment4/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
assignment4/launch/: assignment4.launch  description.launch
assignment4/models/landscape/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
assignment4/models/landscape/meshes/: landscape.dae.bak
assignment4/src/: ekf_models.cpp
assignment4/urdf/: jackal.gazebo  jackal.urdf.xacro
assignment4/worlds/: landscape.world
assignment5/: CMakeLists.txt  assignment5.rviz  package.xml
assignment5/launch/: amcl.launch  assignment5.launch  control.launch  description.launch  gazebo.launch  husky_empty_world.launch  husky_playpen.launch  spawn_husky.launch
assignment5/src/: amcl_node.cpp  beam.cpp  help  laser.cpp  laser.h  likelihoodfield.cpp  odom.cpp  system.cpp
assignment5/urdf/: husky.urdf.xacro
